--- a/route/login.html
+++ b/route/login.html
@@ -9,11 +9,9 @@
 <body>
     <h1>登录</h1>
     <form action="http://127.0.0.1:3000/login">
-        用户名：<input type="text" id='username' name="username">
-        密码：<input type="text" id='password' name="password">
-        <input type="submit" value="登录">
-    
-    
+        <p>用户名：<input type="text" placeholder="请输入用户名" name="username"></p>
+    <p>密码：<input type="text" placeholder="请输入密码" name="password"></p>
+        <p><input type="submit" value="登录"></p>
     </form>
 </body>
 </html>
