--- a/fs/404.html
+++ b/fs/404.html
@@ -5,12 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <style>
-    
-    </style>
 </head>
 <body>
-    <h1>这个是一个测试页面</h1>
-    <h1></h1>
+    <h1>信息错误 404</h1>
 </body>
 </html>
