--- a/fs/static.html
+++ b/fs/static.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <style>
-    
-    </style>
 </head>
 <body>
-    <h1>这个是一个测试页面</h1>
-    <h1></h1>
+    <h1>欢迎来到课工场</h1>
+    <button id="denglu" name="denglu">登录</button>
+    <button id="zuche" name="zuche">注册</button>
 </body>
 </html>
+<script src="./upload/jquery-1.12.4.js"></script>
+<script src="./static.js"></script>
+<script>
+
+    
+</script>
